--- a/windowsec2.yaml
+++ b/windowsec2.yaml
@@ -77,14 +77,14 @@ Resources:
   NewKeyPair:
     Type: AWS::EC2::KeyPair
     Properties:
-      KeyName: apple
+      KeyName: apple5
 
   Ec2Instance: 
     Type: AWS::EC2::Instance
     Properties: 
       ImageId: "ami-06c2ec1ceac22e8d6"
       InstanceType: "t2.micro"         
-      KeyName: "apple" 
+      KeyName: "apple5" 
       SecurityGroupIds: 
         - Ref: "InstanceSecurityGroup"
       SubnetId: 
@@ -96,9 +96,19 @@ Resources:
   NewVolume:
     Type: AWS::EC2::Volume
     Properties:
-      Size: 30
-      AvailabilityZone: "ap-south-1a"
+      Size: 100
+      AvailabilityZone: ap-south-1a
       Tags:
-        - Key: "Name"
-          Value: "Rudra9"
+        - Key: Name
+          Value: Rudra99
+
+  MountPoint:
+    Type: AWS::EC2::VolumeAttachment
+    Properties:
+      InstanceId: 
+        Ref: Ec2Instance
+      VolumeId:
+        Ref: NewVolume
+      Device: /dev/sdh
+
                          
